maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:21: error: expected class or object definition
def keepHandOnSideWall(){
^Escaper:39: error: expected class or object definition
def Nord(){
^Escaper:59: error: Unmatched closing brace '}' ignored here
}
^