maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
  while(getY>0 && !estSurBiscuit){
    Nord()
  }
  
  while(!estSurBiscuit){
    var sommeAngle=0
    var meDir=getDirection()
    do{
      sommeAngle= sommeAngle+ keepHandOnSideWall()
    }while(sommeAngle !=0 && estSurBiscuit() && getDirection()!= meDir)
    
    }
   
  }
  prendBiscuit()
}


def keepHandOnSideWall(){
  
  
  var Angleabs
  if(estFaceMur){
    droite()
  } else {
    avance()
    gauche()

    if(estFaceMur){
      droite()
      Angleabs=Angleabs+1
    }
  }
}


def Nord(){
  
  if(getDirection == Direction.NORTH && !estFaceMur){
    avance()

  }

  else if (estFaceMur){
    droite()

  } else {
    avance()
    gauche()

    if(estFaceMur){
      droite()
    }
  }
}